# PlaceViewer

./: .gitignore  OPTIMIZATION_REPORT.md  README.md  build.gradle.kts  gradle.properties  renovate.json  settings.gradle.kts
.github/workflows/: build.yml
build-logic/: build.gradle.kts  settings.gradle.kts
build-logic/src/main/kotlin/: mod.base-conventions.gradle.kts
cpp/PlaceViewer/: CMakeLists.txt
cpp/PlaceViewer/src/viewer/: chunk_packet_builder.cpp  chunk_packet_builder.hpp  placeviewer.cpp  placeviewer.hpp
cpp/PlaceViewer/src/viewer/jni/: jni_native_region3d.cpp  jni_native_region3d.h
gradle/: libs.versions.toml
src/main/java/dev/place/placeviewer/api/chat/: ServerChat.java
src/main/java/dev/place/placeviewer/api/chat/message/: ChatMessage.java  PublicChatMessage.java  SystemMessage.java  WhisperMessage.java
src/main/java/dev/place/placeviewer/api/chat/source/: ChatSource.java  ConsoleChatSource.java  PlayerChatSource.java  SystemChatSource.java
src/main/java/dev/place/placeviewer/api/event/: PlayerJoinQuitBroadcastEvent.java  PlayerPublicMessageEvent.java  PlayerWhisperEvent.java  ServerChatEvent.java
src/main/java/dev/place/placeviewer/api/settings/: PersistentUserSettings.java  PersistentUuidSet.java
src/main/java/dev/place/placeviewer/mixin/: MixinCraftWorld.java  MixinDedicatedServer.java  MixinLoggerChunkProgressListener.java  MixinMinecraftServer.java  MixinMoonriseRegionFileIO.java  MixinPlayerChunkLoaderData.java  MixinPlayerList.java  MixinRegionFileStorage.java  MixinServerChunkCache.java  MixinServerGamePacketListenerImpl.java  MixinSimpleCommandMap.java
src/main/java/dev/place/placeviewer/systems/chat/: ServerChat.java
src/main/java/dev/place/placeviewer/systems/command/: BackForwardCommand.java  CommandUtil.java  DimensionCommand.java  DiscordCommand.java  DonateCommand.java  FlashbackCommand.java  GameModeCommand.java  HelpCommand.java  HereCommand.java  IgnoreCommand.java  IgnoreHereCommand.java  IgnoreTpaCommand.java  NowCommand.java  OldCommand.java  TeleportCommand.java  TpaCommand.java  WhisperCommand.java
src/main/java/dev/place/placeviewer/systems/entrypoint/: PlaceViewer.java  PlaceViewerConfig.java  PlaceViewerDummyPlugin.java  PlaceViewerLibrary.java  PlaceViewerManager.java
src/main/java/dev/place/placeviewer/systems/event/: PlayerCommandFilter.java  PlayerTrafficListener.java
src/main/java/dev/place/placeviewer/systems/flashback/: Epoch.java  EpochIndex.java  EpochPool.java
src/main/java/dev/place/placeviewer/systems/listeners/: AntiSpamListener.java  ExtraChatListener.java  IgnoreMessageListener.java  PlayerCommandFilter.java  PlayerTrafficListener.java  TeleportHistoryListener.java  WorldListener.java
src/main/java/dev/place/placeviewer/systems/protocol/: PlaceViewerProtocol.java
src/main/java/dev/place/placeviewer/systems/region/: DimensionType.java  Region.java  RegionPool.java
src/main/java/dev/place/placeviewer/systems/util/: ExpiringFlag.java  LimitedSizeQueue.java  Ratelimiter.java
src/main/resources/: ignite.mod.json  mixins.placeviewer.json  placeviewer-default.yml
(+28 files in other folders)
